Updated The online Color So it will be Visible

--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ template {
   display: none; }
 
 a {
-  background-color: transparent; }
+  background-color: Black; }
 
 a:active {
   outline: 0; }
