--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -12,10 +12,10 @@
     -webkit-box-shadow: inset 0 0 6px #19c3b4;
 }
 .label-success {
+    font-family:oswald;
     background-color: darkblue;
 }
 
 .label-info {
     font-family:oswald;
-    background-color: green;
 }
